spec/e2e/loops/break/parsing_errors.lit
let a = break # error: [line 1] Syntax error at "break": I was expecting an expression here.
